--- a/docs/css/global.css
+++ b/docs/css/global.css
@@ -70,13 +70,23 @@ h6 {
 }
 
 input[type="text"],
+input[type="number"],
 select {
+    color: unset;
     outline: none;
     border: 1px solid var(--color-text);
     border-radius: var(--radius-md);
     background-color: var(--background-color);
     padding: .5rem;
+    box-sizing: border-box;
+}
+
+input[type="text"],
+select {
     min-width: 100px;
+}
+input[type="number"] {
+    min-width: 30px;
 }
 
 /* Button styles */
@@ -108,6 +118,7 @@ input[type="submit"]:disabled,
 input[type="button"]:disabled,
 button:disabled {
     pointer-events: none;
+    overflow: visible;
 }
 
 input[type="submit"]:after,
@@ -117,12 +128,10 @@ button:after {
     pointer-events: none;
     display: block;
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    inset: -.5px;
     cursor: default;
     background-color: var(--background-color-transparent);
+    border-radius: var(--radius-sm);
     opacity: 0;
     transition: opacity 0.15s ease-in-out;
 }
@@ -132,6 +141,9 @@ input[type="button"]:disabled:after,
 button:disabled:after {
     opacity: 1;
 }
+
+
+
 
 
 
