--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -36,12 +36,6 @@ div#app-content div.empty-message p {
     font-style: italic;
     line-height: calc(100vh - var(--navbar-height) - var(--padding-lg));
 }
-div#app-content::-webkit-scrollbar {
-    background: transparent;
-}
-div#app-content::-webkit-scrollbar-thumb {
-    background: var(--color-primary);
-}
 
 /* Primary Navigation */
 header nav {
@@ -132,22 +126,6 @@ footer a:visited {
     color: var(--color-text);
 }
 
-/* Global interface */
-::-webkit-scrollbar {
-    z-index: 1000;
-    width: 10px;
-    height: 10px;
-    background: var(--color-gray-bg);
-    border-radius: var(--radius-lg);
-}
-::-webkit-scrollbar-thumb {
-    background: var(--color-gray);
-    margin: 2px;
-    border-radius: var(--radius-lg);
-    width: 8px;
-}
-
-
 
 /* Hamburger Menu etc */
 .button-symbol {
@@ -213,7 +191,6 @@ footer a:visited {
     justify-content: space-between;
     align-items: center;
     padding: var(--padding-sm);
-    margin-top: var(--padding-sm);
     background-color: var(--color-gray-bg);
     border: 1px solid var(--color-border);
 }
@@ -689,7 +666,7 @@ footer a:visited {
     color: var(--color-text-light);
     font-style: italic;
     background: var(--background-color);
-    border: 1px solid #dee2e6;
+    border: 1px solid var(--color-border);
     box-sizing: border-box;
     border-top: 0;
 }
