--- a/docs/css/global.css
+++ b/docs/css/global.css
@@ -41,11 +41,9 @@
 
 /* other transitions */
 body, div, span, p, h1, h2, h3, h4, h5, h6,
-input[type="submit"],
-input[type="button"],
-select,
-button {
-    transition: background-color 0.15s ease-in-out, color 0.15s ease-in-out, opacity 0.05s ease-in-out !important;
+th, td, ::after, ::before,
+input[type="submit"], input[type="button"], select, button {
+    transition: background-color 0.1s ease-in-out, color 0.1s ease-in-out, opacity 0.05s ease-in-out !important;
 }
 
 
