--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -832,10 +832,9 @@ table:has(.dragging):not(:has(table .dragging)) > tfoot > tr > .new-row-button::
     content: "×";
     display: block;
     text-align: center;
-    color: white;
+    color: var(--color-text-inverted);
     font-size: 20px;
     line-height: 100%;
-    transition: color 0.15s;
 }
 
 
@@ -854,7 +853,6 @@ td.row-drag-handle {
     /*position: relative;*/
     padding: 0 !important;
     background-color: var(--color-gray-bg);
-    transition: background-color 0.15s ease-in-out;
     outline: 1px solid var(--color-border);
     outline-offset: -.5px;
 }
@@ -957,15 +955,28 @@ tr.selected.drop-target-above > td::after, .drop-target-header + tbody > tr:firs
 
 
 .card {
-    font-size: 11pt;
     display: block;
     box-sizing: border-box;
     border: 1px solid var(--color-border);
+    padding: var(--padding-sm);
+    width: 100%;
+    border-radius: var(--radius-lg);
+}
+.card:has(.content-header) {
+    padding: 0;
+}
+.card .content-header {
+    border-radius: 0;
+    background: transparent;
+    border: 0;
+    border-bottom: 1px
+}
+td .card {
+    font-size: 11pt;
     padding: .25em;
     margin-top: .5em;
+    padding: 2px;
     border-radius: var(--radius-md);
-    width: 100%;
-    transition: background-color 0.15s ease-in-out;
 }
 .card:only-child, .card:first-child, div:has(span:empty) + .card {
     margin-top: 0;
@@ -973,6 +984,26 @@ tr.selected.drop-target-above > td::after, .drop-target-header + tbody > tr:firs
 .card.clickable, button.card {
     cursor: pointer;
 }
+
+/* Cards Grid Component */
+.cards-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 1fr;
+    align-items: center;
+    gap: var(--padding-sm);
+    padding: var(--padding-sm);
+}
+
+.cards-grid .card {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    width: auto;
+    max-width: 100%;
+    height: 100%;
+}
+
 
 /* Table Details Styling */
 
@@ -983,7 +1014,6 @@ tr.selected.drop-target-above > td::after, .drop-target-header + tbody > tr:firs
     min-width: 0;
     font-size: 20px;
     line-height: 10px;
-    transition: transform 0.3s ease-in-out;
 }
 
 .details-row-container {
@@ -1245,6 +1275,14 @@ tr:hover > td > .table-cell-container > .table-edit-textarea, tr:hover > td > .t
     .container.dashboard-card.wide {
         width: var(--page-width-card);
         grid-column: span 1;
+    }
+
+    .cards-grid {
+        display: flex;
+        flex-direction: column;
+    }
+    .cards-grid .card {
+        width:100%;
     }
 }
 
