--- a/docs/css/theme.css
+++ b/docs/css/theme.css
@@ -35,6 +35,12 @@
     --color-gray-bg-hover: #e0e0e0;
 
     /* Colors */
+    --color-purple: #6f42c1;
+    --color-purple-hover: #5a32a3;
+    --color-purple-bg: #e3d8f0;
+    --color-purple-bg-transparent: #6f42c133;
+    --color-purple-bg-hover: #7a4a8a;
+
     --color-red: #ce2a24;
     --color-red-hover: #ad0a0a;
     --color-red-bg: #ff9a9a;
@@ -115,6 +121,12 @@
         --color-primary-light: #156bcc;
         --color-primary-gradient: linear-gradient(to bottom, var(--color-blue-bg), var(--color-primary-light));
 
+        --color-purple: #b084f5;
+        --color-purple-hover: #9a63e0;
+        --color-purple-bg: #4d234d;
+        --color-purple-bg-transparent: #b084f533;
+        --color-purple-bg-hover: #7a2a7a;
+        
         --color-red: #ff6b6b;
         --color-red-hover: #ff3b3b;
         --color-red-bg: #4d2323;
